--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ts-node-dev": "^1.0.0-pre.40",
     "@types/jsdom": "^12.2.4",
     "@types/node": "^8.10.50",
+    "@types/express": "^4.17.0",
     "express": "^4.17.1",
     "angular": "^1.7.8",
     "@types/angular": "^1.6.55",
