--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack-cli --config=src/webpack.config.js --mode=production",
-    "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/ts-node-dev src/server.ts"
+    "build": "cross-env NODE_ENV=production webpack-cli --config=src/webpack.config.js --mode=production",
+    "start": "cross-env NODE_ENV=development ts-node-dev src/server.ts"
   },
   "dependencies": {
     "@angular/common": "^8.1.1",
@@ -13,12 +13,14 @@
     "@types/express": "^4.17.0",
     "@types/jsdom": "^12.2.4",
     "@types/node": "^8.10.50",
+    "@types/webpack": "^4.32.1",
     "angular": "^1.7.8",
     "browser-sync": "^2.26.7",
     "connect-browser-sync": "^2.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "express": "^4.17.1",
+    "fp-ts": "^2.0.3",
     "hard-source-webpack-plugin": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.4.0",
