--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
     "target": "es5",
-    "lib": ["es5"],
+    "lib": ["es6"],
     "sourceMap": true,
     "noEmitOnError": true,
     "experimentalDecorators": true,
+    "strict": true
   },
 }
